<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashwin.sadhanasms.MainActivityFragment"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvWakeUp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="WU:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvWakeUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/wake_up_time"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvDayRest"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvDayRest"
                android:layout_toStartOf="@+id/tvDayRest"
                android:text="DR:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvDayRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvWakeUp"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/day_rest_duration"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvToBed"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="TB:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvToBed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvDayRest"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/to_bed_time"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvJapa"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="Japa:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvJapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvToBed"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/japa_completion"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvHearing"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="Hearing:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvHearing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvJapa"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hearing"
                android:textColor="#000000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvReading"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="Reading:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvHearing"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/reading"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvStudy"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="Study:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvStudy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvReading"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/study"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvServiceTime"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tvWakeUp"
                android:layout_toStartOf="@+id/tvWakeUp"
                android:text="Service:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvServiceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvStudy"
                android:layout_marginRight="29dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/service_duration"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etServiceType"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvServiceTime"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="@string/service_type"
                android:textColor="#000000" />

            <TextView
                android:id="@id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etSentBy"
                android:layout_alignStart="@+id/etSentBy"
                android:layout_below="@+id/etServiceType"
                android:layout_marginTop="20dp"
                android:text="Send As:"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etSentBy"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etSentBy"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:src="@android:drawable/ic_dialog_email" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
